{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1199,
  "lineage": "4f1114b7-e8df-667a-0ecc-5c7a575a5309",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09eac1aa7c1bcfb80",
            "domain": "vpc",
            "id": "eipalloc-0c28f2eacb4dc831e",
            "instance": "i-0d9d5ee3f4cc15e93",
            "network_interface": "eni-0f93b67c9be16a82c",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-232-27-30.compute-1.amazonaws.com",
            "public_ip": "3.232.27.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #001"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-041172daa21b9d9c9",
            "domain": "vpc",
            "id": "eipalloc-011f90d3963660a24",
            "instance": "i-07d3774101007cc03",
            "network_interface": "eni-04c33f20f8c1cf376",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-3-221-245-186.compute-1.amazonaws.com",
            "public_ip": "3.221.245.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #002"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c827c9f6ba499a4e",
            "domain": "vpc",
            "id": "eipalloc-07b38e7af01945be7",
            "instance": "i-008179aab24d3ee24",
            "network_interface": "eni-0fc6e183348b9372a",
            "private_dns": "ip-10-0-3-10.ec2.internal",
            "private_ip": "10.0.3.10",
            "public_dns": "ec2-52-205-23-192.compute-1.amazonaws.com",
            "public_ip": "52.205.23.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #003"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423750041257:loadbalancer/elb-001",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 10,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-001-1115123365.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb-001",
            "idle_timeout": 30,
            "instances": [
              "i-008179aab24d3ee24",
              "i-07d3774101007cc03",
              "i-0d9d5ee3f4cc15e93"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 8080,
                "lb_protocol": "http"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-001",
            "security_groups": [
              "sg-0db8d36cefc6fa12a"
            ],
            "source_security_group": "423750041257/sg_001",
            "source_security_group_id": "sg-0db8d36cefc6fa12a",
            "subnets": [
              "subnet-039d1cd05f91c3f4a"
            ],
            "tags": {
              "Name": "elb-001"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.ec2_001",
            "aws_instance.ec2_002",
            "aws_instance.ec2_003",
            "aws_security_group.sg_001",
            "aws_subnet.sn_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-0d9d5ee3f4cc15e93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9d5ee3f4cc15e93",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f93b67c9be16a82c",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-232-27-30.compute-1.amazonaws.com",
            "public_ip": "3.232.27.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-014930ed074b2d23d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039d1cd05f91c3f4a",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #001",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db8d36cefc6fa12a"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_001",
            "aws_security_group.sg_001",
            "aws_subnet.sn_001",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-07d3774101007cc03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d3774101007cc03",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_002",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c33f20f8c1cf376",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-3-221-245-186.compute-1.amazonaws.com",
            "public_ip": "3.221.245.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d8d69578d60940f5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002d63a3cdacf967b",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #002",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db8d36cefc6fa12a"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_002",
            "aws_security_group.sg_001",
            "aws_subnet.sn_002",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-008179aab24d3ee24",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008179aab24d3ee24",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_003",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc6e183348b9372a",
            "private_dns": "ip-10-0-3-10.ec2.internal",
            "private_ip": "10.0.3.10",
            "public_dns": "ec2-52-205-23-192.compute-1.amazonaws.com",
            "public_ip": "52.205.23.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08fd6b6b4d34dfc87",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1df5bf513ba1496",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #003",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db8d36cefc6fa12a"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_003",
            "aws_security_group.sg_001",
            "aws_subnet.sn_003",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00cecd0403270f90c",
            "owner_id": "423750041257",
            "tags": {
              "Name": "INTERNET-GATEWAY #001"
            },
            "vpc_id": "vpc-095db3a6f8ec4d1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07c1a8703effd15bf",
            "owner_id": "423750041257",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00cecd0403270f90c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ROUTE-TABLE #001"
            },
            "vpc_id": "vpc-095db3a6f8ec4d1a8"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed1693e65d18624f",
            "route_table_id": "rtb-07c1a8703effd15bf",
            "subnet_id": "subnet-039d1cd05f91c3f4a"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_001",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01471ea5fdc51becc",
            "route_table_id": "rtb-07c1a8703effd15bf",
            "subnet_id": "subnet-002d63a3cdacf967b"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_002",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0b105adebbdd13b",
            "route_table_id": "rtb-07c1a8703effd15bf",
            "subnet_id": "subnet-0b1df5bf513ba1496"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_003",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:security-group/sg-0db8d36cefc6fa12a",
            "description": "IMPORTANTE: permite acceso = SSH - HTTP - HTTPs - TOMCAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db8d36cefc6fa12a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_001",
            "name_prefix": null,
            "owner_id": "423750041257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SECURITY-GROUP #001"
            },
            "timeouts": null,
            "vpc_id": "vpc-095db3a6f8ec4d1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-039d1cd05f91c3f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-039d1cd05f91c3f4a",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #001"
            },
            "vpc_id": "vpc-095db3a6f8ec4d1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-002d63a3cdacf967b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-002d63a3cdacf967b",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #002"
            },
            "vpc_id": "vpc-095db3a6f8ec4d1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-0b1df5bf513ba1496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b1df5bf513ba1496",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #003"
            },
            "vpc_id": "vpc-095db3a6f8ec4d1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:vpc/vpc-095db3a6f8ec4d1a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdf140cee06b4d27",
            "default_route_table_id": "rtb-0a218defdd51deb86",
            "default_security_group_id": "sg-012711a62a2f1b99a",
            "dhcp_options_id": "dopt-19c36463",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-095db3a6f8ec4d1a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a218defdd51deb86",
            "owner_id": "423750041257",
            "tags": {
              "Name": "VPC #001"
            }
          }
        }
      ]
    }
  ]
}